--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .Header {
   max-width: 100%;
-  background-color: #ff5151;
+  background-color: #1abc9c;
   border-radius: 10px;
   -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
